# blog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder-musl  docker-compose.yml  docker-entrypoint.sh  docker-stack.yaml  docker-stack.yml  package-lock.json  package.json  rust-analyzer.toml  stack.env  tailwind.config.js
.github/workflows/: pipeline.yml
.sqlx/: query-0bceaad5822ede531c7b829f24d0be849f4e7f985311140be2e28be753f3b59b.json  query-0d0b0d6259fd9a85f586f4922427b577b56a8101a8b7ee47a4bc3f6de8423873.json  query-29c8521f7fe46ae1b8d0fc4fe497185591143347b7129a8405badd65f5b6b008.json  query-2b363268ce4f498a6e51116229383ee6fb9c1f1aa3ceee8b1b8c8266d138eec8.json  query-587b2ef35c18756c665bbf008b8bf3df3be9d93507d8e75c4cdbd604c9b5d183.json  query-5a4e19227665c848bbc1b8a43f03eb647938787a2df84aa6e66b76509e643bb6.json  query-efaab06a37c4d765ffc4bd6fab4e310f4f14bb9001e9a5168474bc3a9ae64cce.json
app/: Cargo.toml
app/src/: components.rs  db.rs  lib.rs  models.rs  routes.rs  state.rs
app/src/components/: bottom_nav.rs  flappy_bird.rs  flappybird.rs  mod.rs  post.rs  post_card.rs  post_category.rs
app/src/models/: category.rs  flappy_bird.rs  mod.rs  post.rs  routes.rs
app/src/routes/: blog_list.rs  blog_post.rs  home.rs  mod.rs  nav.rs  page_not_found.rs
frontend/src/: lib.rs
migrations/: 0001_create_blog_schema.sql  0002_sample_data.sql
server/: Cargo.toml
server/src/: main.rs
style/: tailwind.css
