[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

leptos-use.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true
rand.workspace = true
getrandom.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
codee.workspace = true
chrono = {workspace = true, optional = true }
femark = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:chrono",
    "dep:femark",
    "dep:sqlx",
]
